updated readme screenshots